@@ -20,6 +20,7 @@
 
 2010-06-21  Steffen Kamper  <info@sk-typo3.de>
 
+	* Fixed bug #14808 tceforms.js slows down performance of IE dramatically (Thanks to Jo Hasenau)
 	* Fixed bug #14721: Flexform sections are unstyled and look weird
 	* Fixed bug #11543: Shortcuts broken if current directory is not in include path (Thanks to Mads Chr. Olesen)
 
